--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
-numpy
-pandas
-scipy
-numba
-threadpoolctl
-scikit-learn
-emoji
-nltk
-spacy
-pattern
-gensim
-mip
-langdetect
-plotly.express
-datetime
-matplotlib
-seaborn
-openpyxl
+numpy==1.26.4
+pandas==2.2.2
+scipy==1.10.1
+numba==0.59.1
+threadpoolctl==3.5.0
+scikit-learn==1.4.2
+emoji==2.11.1
+nltk==3.8.1
+spacy==3.7.4
+pattern==3.6
+gensim==4.3.2
+mip==1.15.0
+langdetect==1.0.9
+plotly.express==0.4.1
+datetime==5.5
+matplotlib==3.8.4
+seaborn==0.13.2
+openpyxl==3.1.2
+kaleido==0.2.1
